--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
-
-
+*{
+    box-sizing: border-box;
+}
 body{
-    background-color: #fffafa;
+    background-image: linear-gradient(142deg,#9861c2,#5cc0de);
     font-family: sans-serif,"Merriweather";
     display: flex;
     align-items: center;
@@ -16,7 +17,7 @@ body{
     padding: 30px;
     text-align: center;
     max-width: 1000px;
-    border: 3px solid black;
+    border: 3px solid rgb(58, 122, 175);
 
 }
 .input-container{
@@ -24,17 +25,18 @@ body{
     align-content: center;
     justify-content: center;
     margin: 40px 0;
-    padding: 0 50px 0 50px;
 }
 .code{
+    caret-color: transparent;
      border-radius:5px;
-     font-size: 70px;
-     height: 120px;
-     width: 90px;
+     font-size: 40px;
+     height: 80px;
+     width: 75px;
      border: 1px solid #eee;
      text-align: center;
      font-weight: 300;
      margin: 10px;
+     background-color: rgba(255,255,255,0.6);
 }
 .code::-webkit-inner-spin-button, .code::-webkit-outer-spin-button{
     display: none;
@@ -50,13 +52,34 @@ body{
 
 }
 .info{
-    background-color: #eeeeee;
-    color: #777777b0;
+    background-color: rgb(238 238 238 / 67%);
+    color: rgb(119 119 119);
     display: inline-block;
     padding: 10px;
     max-width: 500px;
     border-radius: 5px;
     font-size: 16px;
+}
+.btn{
+    font-family: "Lato",sans-serif;
+    min-width: 367px;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    cursor: pointer;
+    border: 1px solid transparent;
+    margin: 0 0 20px 0;
+    padding: 0.770rem 0;
+    font-size: 1rem;
+    line-height: 1;
+    border-radius: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.7;
+    color: #fff;
+    background-color:#9e59c9a8;
+    border-color: #9861c2;
 }
 .code::placeholder{
     color: #777777b0;
